--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ window.addEventListener("DOMContentLoaded", () => {
 
   <div class="footer">
     Isso é um protótipo. Depois vamos trocar todos os vídeos pelos do Dani e ajustar textos.<br>
-    Instagram: <a href="https://instagram.com" target="_blank">@danielsousafisio</a>
+    Instagram: <a href="https://instagram.com" target="_blank">@danielsousafuncional</a>
   </div>
 </div>
 </body>
